# market-trends

./: .env.example  .gitignore  Makefile  README.md  market.ipynb  pyproject.toml
src/: __init__.py  charts.py  config.py  data_fetcher.py  data_loader.py  settings.py  transformers.py
