[project]
name = "market-trends"
version = "0.1.0"
description = "Iranian market trends analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "persiantools>=4.0.0",
    "requests>=2.28.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "kaleido>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
]
